--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^4.2.1",
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.0",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.5.0",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
