--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.5.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
