--- a/package.json
+++ b/package.json
@@ -7,16 +7,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
-    "@mui/x-date-pickers": "^5.0.9",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
-    "chart.js": "^4.2.1",
     "firebase": "^9.18.0",
-    "formik": "^2.2.9",
     "react": "^18.0.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.0.5",
@@ -24,11 +16,9 @@
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.0",
     "reactjs-popup": "^2.0.5",
-    "recharts": "^2.5.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^4.9.0"
   }
 }
