--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "5.6.0",
+    "@capacitor/core": "^5.6.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
+    "asciimath-to-latex": "^0.5.1",
+    "ckeditor4-react": "^5.0.0",
     "firebase": "^9.23.0",
     "firebase-functions": "^4.4.1",
+    "katex": "^0.16.9",
+    "mathjax3-react": "^1.2.0",
+    "mathjs": "^12.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-katex": "^3.0.1",
+    "react-mathjax2": "^0.0.2",
+    "react-mathquill": "^1.0.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.12.0",
@@ -46,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.6.0",
     "webpack-bundle-analyzer": "^4.9.0"
   }
 }
